--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -10,16 +10,16 @@ $images: $assets + '/images/';
 
 $color-01: #ffffff; // white
 $color-02: #000000; // black
-$color-03: #1e2f43; // very dark blue
+$color-03: #090909; // blackish
 $color-04: #15212c; // very dark blue
 $color-05: #0d171b; // very dark blue
 $color-06: #a4c27e; // green
 $color-07: #7ea8c2; // blue
 $color-08: #333333; // blackish
 $color-09: #fcfcce; // pale yellow
-$color-10: #1c2f25; // green
+$color-10: #1c2f25; // dark green
 $color-11: #d31141; // red
-$color-12: #090909; // blackish
+$color-12: #333333; // 
 $color-13: #333333; // 
 $color-14: #333333; // 
 
