--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
@@ -19,10 +19,10 @@
 				line-height: 0;
 			}
 			.button-wrapper {
-				margin: 0 -2.5px 20px -2.5px;
+				margin: 0 -2.5px 12px -2.5px;
 				.button-link {
 					vertical-align: middle;
-					margin: 0 2.5px 5px 2.5px;
+					margin: 0 2.5px 8px 2.5px;
 				}
 			}
 		}
@@ -60,30 +60,30 @@
 	max-width: 600px;
 	margin: 0 auto;
 	padding: 20px;
-	background: $color-01;
-	border: 2px solid $color-03;
-	color: $color-08;
+	background: $color-05;
+	border: 1px solid $color-03;
 	.alert_close {
 		position: absolute;
 		top: -10px;
 		right: -10px;
 		z-index: 2;
 		@include sizing(24px, 24px);
-		background: $color-03;	
+		background: $color-05;	
 		border-radius: 100%;
 		text-align: center;
-		.icon {
-			color: $color-01;	
+		color: $color-01;
+		.icon {				
 			line-height: 24px;
 		}
-	}
-	.alert_text {		
-		h3 {
-			color: $color-01;
-			background: $color-03;
-			padding: 5px 10px;
-			margin: -20px -20px 20px -20px;
+		&:hover {
+			color: $color-06;
 		}
+	}
+	.alert_text h3 {
+		color: $color-01;
+		background: $color-04;
+		padding: 10px 20px;
+		margin: -20px -20px 20px -20px;
 	}
 }
 
