--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -28,7 +28,7 @@ input[type='text'], input[type='password'], input[type='email'], input[type='url
 }
 
 input[type='text'], input[type='password'], input[type='email'], input[type='url'], select, textarea {
-	background: $color-12;
+	background: $color-03;
 	border-radius: 3px;
 	color: $color-02;
 	width: 100%;
@@ -48,7 +48,7 @@ select option {
 	color: $color-02;
 }
 
-input[type='submit'], .button {
+input[type='submit'], input[type='button'], .button {
 	background: $color-10;
 	color: $color-01;
 	border-radius: 3px;
