--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_normalize.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_normalize.scss
@@ -6,6 +6,7 @@
    2. Brought more selectors on the same lines
    3. Removed rules for h1 (this will be overriden most likely)
    4. Removed rules for fieldset (will style if needed)
+   5. Remove box-sizing rules on elements
 ========================================================================== */ 
 
 /* General
@@ -108,7 +109,6 @@ figure {
 }
 
 hr {
-	box-sizing: content-box;
 	height: 0;
 }
 
@@ -157,7 +157,6 @@ input {
 }
 
 input[type="checkbox"], input[type="radio"] {
-	box-sizing: border-box;
 	padding: 0;
 }
 
@@ -167,7 +166,6 @@ input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-o
 
 input[type="search"] {
 	-webkit-appearance: textfield;
-	box-sizing: content-box;
 }
 
 input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
