--- a/khyeras/styles/khyeras_v1/template/navbar_header.html
+++ b/khyeras/styles/khyeras_v1/template/navbar_header.html
@@ -134,6 +134,30 @@
 				</ul>
 			</div>
 		</li>
+		<!-- EVENT overall_header_searchbox_before -->
+		<!-- IF S_DISPLAY_SEARCH and not S_IN_SEARCH -->
+			<li class="dropdown-container">
+				<a href="#"><span>Search</span></a>
+				<i class="icon icon-lg fa-chevron-down dropdown-trigger"></i>
+				<div id="search-box" class="search-box search-header dropdown" role="search">				
+					<div class="dropdown-contents">
+						<form action="{U_SEARCH}" method="get" id="search">
+							<fieldset>
+								<input name="keywords" id="keywords" type="search" maxlength="128" title="{L_SEARCH_KEYWORDS}" class="inputbox search tiny" size="20" value="{SEARCH_WORDS}" placeholder="{L_SEARCH_MINI}" />
+								<button class="button button-search" type="submit" title="{L_SEARCH}">
+									<i class="icon fa-search fa-fw" aria-hidden="true"></i><span class="sr-only">{L_SEARCH}</span>
+								</button>
+								<a href="{U_SEARCH}" class="button button-search-end" title="{L_SEARCH_ADV}">
+									<i class="icon fa-cog fa-fw" aria-hidden="true"></i><span class="sr-only">{L_SEARCH_ADV}</span>
+								</a>
+								{S_SEARCH_HIDDEN_FIELDS}
+							</fieldset>
+						</form>
+					</div>
+				</div>
+			</li>
+		<!-- ENDIF -->
+		<!-- EVENT overall_header_searchbox_after -->
 		<!-- EVENT overall_header_navigation_prepend -->
 		<!-- EVENT overall_header_navigation_append -->
 	</ul>
