Updating forum / topic structure

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
@@ -7,7 +7,7 @@
 	.footer-inner {
 		background: $color-04;
 		padding: 0 0 30px 0;
-		.row .column {
+		.flex-row .flex-column {
 			.copyright, .bottom-line {
 				font-size: rem(14px);
 			}
