--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
@@ -22,6 +22,7 @@
 @import 'form-fields';
 // @import 'vendors';
 @import 'layout';
+@import 'forums-topics';
 @import 'header';
 @import 'footer';
 // @import 'responsive';
