--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -7,8 +7,8 @@
 		<footer id="page-footer" class="page-footer" role="contentinfo">
 			<div class="footer-inner">
 				<div class="wrapper">
-					<div class="row row-20">
-						<div class="column">
+					<div class="flex-row flex-row-20">
+						<div class="flex-column">
 							<p>Freed from Bhelest's nightmares, the realm of Khy'eras unveiled vast reaches perfect for exploration. Create a character and unlock the land's secrets. Original high fantasy RPG with no word count.</p>
 							<p>
 								<a class="button-link" href="//rpgrating.com" target="_blank">
@@ -24,11 +24,11 @@
 								<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
 							</p>					
 						</div>
-						<div class="column">
+						<div class="flex-column">
 							<h4>Random Content Goes Here</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis.</p>
 						</div>
-						<div class="column">
+						<div class="flex-column">
 							<h4>Listed At</h4>
 							<div class="button-wrapper">
 								<a class="button-link" href="//google.com" target="_blank">
@@ -76,8 +76,8 @@
 							</div>				
 						</div>
 					</div>
-					<div class="row row-20">
-						<div class="column">
+					<div class="flex-row flex-row-20">
+						<div class="flex-column">
 							<p class="bottom-line">
 								<!-- EVENT overall_footer_timezone_before -->
 								<i class="icon fa-clock-o fa-fw" aria-hidden="true"></i>{S_TIMEZONE}
