--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_forums-topics.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_forums-topics.scss
@@ -15,17 +15,22 @@
 			}
 			dt {
 				@include flex(base);
+				.forumtitle, .topictitle {
+					font-weight: bold;
+					@include inline-block(baseline);
+					margin: 0 0 5px 0;
+				}
 			}
 			dd {
 				margin: 0;
 				dfn {
 					font-style: normal;
+					position: absolute;
+					top: -9999px;
+					left: -9999px;
 				}
 				&.topics, &.posts, &.views {
-					flex: 0 0 100px;
-					dfn {
-						display: none;
-					}					
+					flex: 0 0 100px;					
 				}
 				&.lastpost {
 					flex: 0 0 250px;
@@ -52,14 +57,39 @@
 		}
 	}
 	&.forums, &.topics {
-		li .row-item {
-			background-repeat: no-repeat;
-			background-position: 10px 5px;	
-			dt .list-inner {
-				padding: 0 0 0 45px;
-			}		
+		li {
+			padding: 0 0 20px 0;
+			border-bottom: 1px solid $color-04;
+			.row-item {
+				background-repeat: no-repeat;
+				background-position: 10px 5px;
+				dt .list-inner {
+					padding: 0 0 0 45px;
+				}		
+			}
+			&:last-child {
+				padding: 0;
+				border-bottom: 0;
+			}
 		}
-	}	
+	}
+}
+
+/* Forums
+========================================================================== */
+
+.topiclist.forums li .row-item dt {
+	br + strong, .subforum {
+		@include inline-block(baseline);
+		margin: 5px 0 0 0;
+	}
+	br + strong {
+	}
+	.subforum .icon {
+		position: relative;
+		top: -1px;
+		margin: 0 5px;
+	}
 }
 
 /* Forums & Topic Icons
