--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -15,29 +15,66 @@
 	overflow: hidden;
 	position: relative;
 	padding: 0 20px;
-	.site-description {
-		@include flex-flow(column nowrap);
+	.header-content {
+		@include flex-flow(row nowrap);
 		justify-content: center;
-		text-align: center;
-		height: 100%;
-		h1, p {
-			margin: 0;
+		align-items: center;
+		align-content: center;
+		height: 100%;	
+		.site-description, .site-quotes {
+			@include flex(base);
+			max-width: 310px;
 		}
-		h1 {
-			font-family: $font-03;
-			font-size: 90px;
-			font-variant: none;
-			line-height: 1;
-			text-shadow: 3px 2px 0 rgba($color-02, 0.65);
-			a:hover {
-				color: $color-01;
+		.site-description {	
+			text-align: right;		
+			h1, h3 {
+				margin: 0;
+			}
+			h1 {
+				font-family: $font-03;
+				font-size: rem(100px);
+				font-variant: none;
+				line-height: 1;
+				text-shadow: 3px 2px 0 rgba($color-02, 0.65);
+				a:hover {
+					color: $color-01;
+				}
+			}
+			h3 {
+				font-family: $font-02;  
+				font-size: rem(33px);
+				text-shadow: 2px 1px 0 rgba($color-02, 0.65), 2px 1px 5px rgba($color-02, 0.85);
+				letter-spacing: 2px;
+			}		
+		}
+		.site-quotes {
+			font-family: $font-02;
+			text-shadow: 1px 1px 0 rgba($color-02, 0.65), 1px 1px 5px rgba($color-02, 0.85);
+			font-size: rem(15px);
+			span {
+				font-size: rem(40px);
+				@include inline-block(middle);
+				@include sizing(12px, 12px);
+				line-height: 24px;
+				&.quote-left {
+					margin: 0 10px 0 0;
+				}
+				&.quote-right {
+					margin: 0 0 0 10px;
+				}
+			}
+			.quote-author {
+				text-align: right;
+				font-style: italic;			
+				margin: -10px 0 0 0;	
 			}
 		}
-		h3 {
-			font-family: $font-02;  
-			font-size: 30px;
-			text-shadow: 2px 1px 0 rgba($color-02, 0.85);
-			letter-spacing: 2px;
+		.header-divider {
+			background: $color-01;
+			flex: 0 0 1px;
+			height: 20%;
+			margin: 0 40px;
+			box-shadow: 1px 1px 0 0 rgba($color-02, 0.30);
 		}		
 	}
  	.header-overlay {
