--- a/khyeras/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/styles/khyeras_v1/template/overall_header.html
@@ -87,12 +87,19 @@
 			<!-- INCLUDE navbar_header.html -->	
 			<div class="headerbar" role="banner">
 				<!-- EVENT overall_header_headerbar_before -->
-				<div id="site-description" class="site-description">
-					<h1>
-						<a href="<!-- IF U_SITE_HOME -->{U_SITE_HOME}<!-- ELSE -->{U_INDEX}<!-- ENDIF -->" title="<!-- IF U_SITE_HOME -->{L_SITE_HOME}<!-- ELSE -->{L_INDEX}<!-- ENDIF -->">{SITENAME}</a>
-					</h1>
-					<h3>{SITE_DESCRIPTION}</h3>
-					<p class="skiplink"><a href="#start_here">{L_SKIP}</a></p>
+				<div class="header-content">
+					<div id="site-description" class="site-description">
+						<h1>
+							<a href="<!-- IF U_SITE_HOME -->{U_SITE_HOME}<!-- ELSE -->{U_INDEX}<!-- ENDIF -->" title="<!-- IF U_SITE_HOME -->{L_SITE_HOME}<!-- ELSE -->{L_INDEX}<!-- ENDIF -->">{SITENAME}</a>
+						</h1>
+						<h3>{SITE_DESCRIPTION}</h3>
+						<p class="skiplink"><a href="#start_here">{L_SKIP}</a></p>
+					</div>
+					<div class="header-divider"></div>
+					<div id="site-quotes" class="site-quotes">
+						<p><span class="quote-left">"</span>She smirked then as she looked at Kyrian once more. Babysit indeed! She'd take the boy to Siren's Corner first chance she got! HA!<span class="quote-right">"</span></p>
+						<p class="quote-author">- Deanna DiCorvino</p>
+					</div>
 				</div>
 				<div class="header-overlay"></div>
 			</div>
@@ -123,7 +130,7 @@
 		<section id="page-welcome" class="page-welcome">
 			<div class="wrapper">
 				<div class="inner">
-					<div class="flex-row flex-row-10">
+					<div class="flex-row flex-row-20">
 						<div class="introduction flex-column">
 							<p>All at once, the Eidolon's restoration of Khy'eras was obliterated when Bhelest unlocked ancient, concealed magic. With newfound talents, the mage exiled the Eidolons and amassed legions of the undead. Two hundred years of terror transpired until Cecilia of Fellsgard gathered followers to bring forth Bhelest's downfall. Free from nightmares, the expansive realm flourished and explorers journeyed from cities. People referred to Khy'eras as "The Neverend", unsure of its boundaries. Some claimed that those who departed found only death, but others discovered something else entirely - hope and adventures.</p>
 							<p><a href="//google.com">Read more...</a></p>
