--- a/glowbug-forum/styles/glowbug_v1/template/sharing_buttons.html
+++ b/glowbug-forum/styles/glowbug_v1/template/sharing_buttons.html
@@ -1,4 +1,4 @@
-<!-- IF FORUM_ID != 3 and FORUM_ID != 4 and FORUM_ID != 5 and FORUM_ID != 6 -->
+<!-- IF FORUM_ID != 3 and FORUM_ID != 6 and FORUM_ID != 7 and FORUM_ID != 8 and FORUM_ID != 9 -->
 	<div class="sharing-buttons">
 		<!-- DEFINE $SHARE_URL = '{BOARD_URL}viewtopic.php?f={FORUM_ID}%26t={TOPIC_ID}%23p{postrow.POST_ID}' -->
 		<strong>Share On:</strong>
