Update to font styles

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
@@ -38,7 +38,7 @@ ul, ol, dl {
 pre, code {
 	white-space: normal;
 	display: block;
-	font-size: rem(14px);
+	//font-size: rem(14px);
 	font-family: 'Courier New', monospace;
 	background: $color-14;	
 	color: $color-02;
@@ -80,7 +80,7 @@ abbr[title] {
 	display: inline-block;
 	padding: 0 5px;
 	font-family: $sans-serif-fb;
-	font-size: rem(18px);
+	//font-size: rem(18px);
 	line-height: 1;
 	position: relative;
 	top: 2px;
