--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -46,7 +46,7 @@ select option {
 	@include transition(background 0.3s ease-in-out);
 	padding: 10px 20px;
 	&, .icon {
-		font-size: rem(15px);
+//		font-size: rem(15px);
 	}
 	&:hover {
 		background: $color-04;
