--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_forums-topics.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_forums-topics.scss
@@ -46,7 +46,7 @@
 					a {
 						font-family: $font-02;
 						font-variant: small-caps;
-						font-size: rem(20px);
+//						font-size: rem(20px);
 						color: $color-01;
 						&:hover {
 							color: $color-06;
