--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -29,8 +29,8 @@ $color-14: #333333; //
 $base-font-size: 16;
 $serif-fb: garamond, times new roman, serif;
 $sans-serif-fb: arial, sans-serif;
-$font-01: 'Alegreya Sans', $sans-serif-fb;
-$font-02: 'Alegreya', $serif-fb;
+$font-01: 'Fira Sans', $sans-serif-fb;
+$font-02: 'Spectral', $serif-fb;
 $font-03: 'Selima', $sans-serif-fb;
 
 /* Other
