--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -45,7 +45,7 @@
 	padding: 20px;
 	color: $color-08;
 	text-align: center;
-	font-size: rem(18px);
+//	font-size: rem(18px);
 	a {
 		color: $color-07;
 		font-weight: bold;
@@ -89,7 +89,7 @@
 			overflow-x: hidden;
 			padding: 0 20px 0 0;
 			&, .icon {
-				font-size: rem(15px);
+//				font-size: rem(15px);
 			}
 			a {
 				color: $color-01;
@@ -159,7 +159,7 @@
 				margin: 0 5px 0 0;
 			}
 			.fa-chevron-right {
-				font-size: rem(12px);
+//				font-size: rem(12px);
 			}
 		}
 	}
@@ -182,12 +182,12 @@
 ========================================================================== */
 
 #page-welcome {
-	font-size: rem(15px);
+//	font-size: rem(15px);
 	.introduction {
 		p:first-child:first-line {
 			font-family: $font-02;
 			font-variant: small-caps;
-			font-size: rem(18px);
+//			font-size: rem(18px);
 			line-height: 1.3;
 		}
 	}
@@ -264,7 +264,7 @@
 	.header {
 		font-family: $font-02;
 		font-variant: small-caps;
-		font-size: rem(20px);
+//		font-size: rem(20px);
 		background: $color-04;
 		padding: 0 150px 0 10px;
 		height: 40px;
@@ -281,7 +281,7 @@
 			top: 0;			
 			font-family: $font-01;
 			font-variant: none;
-			font-size: rem(14px);
+//			font-size: rem(14px);
 		}
 	}
 	ul {
@@ -310,7 +310,7 @@
 					}
 					.notification-time {
 						text-align: right;
-						font-size: rem(13px);
+//						font-size: rem(13px);
 					}
 				}
 			}
@@ -323,7 +323,7 @@
 				color: $color-06;
 				text-align: center;		
 				.icon {
-					font-size: rem(16px);
+//					font-size: rem(16px);
 				}
 			}
 			&:hover .icon-mark {
