--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_typography.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_typography.scss
@@ -11,48 +11,57 @@
 }
 
 @font-face {
-	font-family: 'Alegreya Sans';
-	src: url($fonts + 'alegreya-sans-light.woff2') format('woff2'),
-		 url($fonts + 'alegreya-sans-light.woff') format('woff'),
-		 url($fonts + 'alegreya-sans-light.ttf') format('truetype');
+	font-family: 'Fira Sans';
+	src: url($fonts + 'firasans-light.woff2') format('woff2'),
+		 url($fonts + 'firasans-light.woff') format('woff'),
+		 url($fonts + 'firasans-light.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: 'Alegreya Sans';
-	src: url($fonts + 'alegreya-sans-light-italic.woff2') format('woff2'),
-		 url($fonts + 'alegreya-sans-light-italic.woff') format('woff'),
-		 url($fonts + 'alegreya-sans-light-italic.ttf') format('truetype');
+	font-family: 'Fira Sans';
+	src: url($fonts + 'firasans-light-italic.woff2') format('woff2'),
+		 url($fonts + 'firasans-light-italic.woff') format('woff'),
+		 url($fonts + 'firasans-light-italic.ttf') format('truetype');
 	font-weight: normal;
 	font-style: italic;
 }
 
 @font-face {
-	font-family: 'Alegreya Sans';
-	src: url($fonts + 'alegreya-sans-bold.woff2') format('woff2'),
-		 url($fonts + 'alegreya-sans-bold.woff') format('woff'),
-		 url($fonts + 'alegreya-sans-bold.ttf') format('truetype');
+	font-family: 'Fira Sans';
+	src: url($fonts + 'firasans-medium.woff2') format('woff2'),
+		 url($fonts + 'firasans-medium.woff') format('woff'),
+		 url($fonts + 'firasans-medium.ttf') format('truetype');
 	font-weight: bold;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: 'Alegreya Sans';
-	src: url($fonts + 'alegreya-sans-bold-italic.woff2') format('woff2'),
-		 url($fonts + 'alegreya-sans-bold-italic.woff') format('woff'),
-		 url($fonts + 'alegreya-sans-bold-italic.ttf') format('truetype');
+	font-family: 'Fira Sans';
+	src: url($fonts + 'firasans-medium-italic.woff2') format('woff2'),
+		 url($fonts + 'firasans-medium-italic.woff') format('woff'),
+		 url($fonts + 'firasans-medium-italic.ttf') format('truetype');
 	font-weight: bold;
 	font-style: italic;
 }
 
 @font-face {
-	font-family: 'Alegreya';
-	src: url($fonts + 'alegreya.woff2') format('woff2'),
-		 url($fonts + 'alegreya.woff') format('woff'),
-		 url($fonts + 'alegreya.ttf') format('truetype');
+	font-family: 'Spectral';
+	src: url($fonts + 'spectral.woff2') format('woff2'),
+		 url($fonts + 'spectral.woff') format('woff'),
+		 url($fonts + 'spectral.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Spectral';
+	src: url($fonts + 'spectral-italic.woff2') format('woff2'),
+		 url($fonts + 'spectral-italic.woff') format('woff'),
+		 url($fonts + 'spectral-italic.ttf') format('truetype');
+	font-weight: normal;
+	font-style: italic;
 }
 
 @font-face {
@@ -73,7 +82,7 @@ html {
 
 body {
 	font-family: $font-01;
-	font-size: rem(16px);
+	font-size: rem(14px);
 	line-height: 1.5;
 	font-weight: normal;
 	color: $color-01;
@@ -111,29 +120,29 @@ h1, h2, h3, h4, h5, h6 {
 	}
 }
 
-h1 {
-	// Forum name
-	font-size: rem(40px);
-}
+// h1 {
+// 	// Forum name
+// 	font-size: rem(40px);
+// }
 
-h2 {
-	// Forum header titles
-	font-size: rem(35px);
-}
+// h2 {
+// 	// Forum header titles
+// 	font-size: rem(35px);
+// }
 
-h3 {
-	// Sub-headers (also used as post headers, but defined later)
-	font-size: rem(30px);
-}
+// h3 {
+// 	// Sub-headers (also used as post headers, but defined later)
+// 	font-size: rem(30px);
+// }
 
-h4 {
-	// Forum and topic list titles
-	font-size: rem(25px);
-}
+// h4 {
+// 	// Forum and topic list titles
+// 	font-size: rem(25px);
+// }
 
-h5, h6 {
-	font-size: rem(22px);
-}
+// h5, h6 {
+// 	font-size: rem(22px);
+// }
 
 /* Icons
 ========================================================================== */
